[package]
name = "rust-edge-compute"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
prost = "0.12"
nvml-wrapper = "0.9"
anyhow = "1.0"
ratatui = "0.24"
rand = "0.8"

[build-dependencies]
tonic-build = "0.10"
protoc-bin-vendored = "3.0"
